<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".ui.detail.DetailFragment">

    <!--AppBarLayout helps the toolbar and other components to react on
        scroll changes. I am using Dark theme for AppBarLayout.
        Inside this AppBarLayout i
        have used CollapsingToolbarLayout. -->
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar">
        <!-- In CollapsingToolbarLayout sompe important attributes are:
         i)  app:layout_scrollFlags which is used to specify how collapsing
             layout behaves when content is scrolled.I have used
             app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
             so it will scroll until it's is completely collapsed.
         ii) app:contentScrim="@color/green" that specifies the color
              of the collapsed toolbar -->
        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/id_detail_collap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            app:contentScrim="@color/purple_500_low"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
            app:title="@string/app_name">
            <!--We are adding the image that we have added earlier
                  in the drawable folder.The attribute app:layout_collapseMode="parallax"
                  causes the image to move when user scrolls at a specific ratio. -->
            <ImageView
                android:id="@+id/id_detail_img"
                android:layout_width="match_parent"
                android:layout_height="450dp"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax" />
            <!-- Thw attribute app:layout_collapseMode="pin" is set so that
                 sticks to the top when the user scrolls the view up-->
            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Dark" />

            <TextView
                android:layout_margin="2dp"
                android:layout_gravity="top|right"
                android:id="@+id/id_detail_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="1dp"
                android:text="0.0"
                android:textSize="24sp"
                app:drawableTopCompat="@drawable/ic_stars_24" />
        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>
    <!--Now add the NestedScollView-->
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <!--In textview we will be adding the text that i have
            added earlier in strings.xml file.This is simply the
            the content to be scrolled -->
        <TextView
            android:text="descriotion"
            android:id="@+id/id_detail_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="8sp"
            android:padding="16dp"
            android:textSize="20sp" />
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>