<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/id_menu_movie"
        android:icon="@drawable/ic_movie"
        android:title="Movie" />
    <item
        android:id="@+id/id_menu_tv"
        android:icon="@drawable/ic_tv"
        android:title="Tv Show" />
</menu>