<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.tv.TvFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="No Connection!"
        android:layout_gravity="center"
        android:visibility="invisible"
        android:background="@color/transparent"
        android:id="@+id/id_text_info_tv" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/id_recview_tv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/item_card" />
</FrameLayout>